# vega-desktop

./: .gitignore  README.md  index.html  memory.md  package-lock.json  package.json  plan.md  progress.md  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.kilo/: kilo.jsonc
scripts/: generate-wide-tile.mjs  setup-libmpv.mjs
src/: App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cookie_manager.rs  doh_client.rs  download_manager.rs  external_mpv.rs  lib.rs  main.rs  stream_server.rs  sync_manifest.rs  torrent.rs
src-tauri/windows/: hooks.nsh
src/components/: CustomSelect.css  CustomSelect.tsx  DownloadServerDialog.css  DownloadServerDialog.tsx  SearchSubtitlesModal.css  SearchSubtitlesModal.tsx  WafDialog.css  WafDialog.tsx
src/components/home/: ContentSlider.css  ContentSlider.tsx  Hero.css  Hero.tsx
src/components/layout/: Layout.css  Layout.tsx  ProviderSwitcher.css  ProviderSwitcher.tsx  Sidebar.css  Sidebar.tsx  Topbar.css  Topbar.tsx
src/components/settings/: PreferencesSettings.tsx  SubtitleSettings.tsx
src/lib/: client.ts  constants.ts  downloadLibrary.ts  getHomepagedata.ts
src/lib/file/: ifExists.ts
src/lib/hooks/: useAppUpdater.ts  useContentInfo.ts  useEpisodes.ts  useExternalMpv.ts  useGlobalSearch.ts  useHomePageData.ts  useMpvPlayer.ts  usePlayerSettings.ts  useSearch.ts  useStream.ts
src/lib/providers/: cookieStore.ts  headers.ts  providerContext.ts  tauriAxiosAdapter.ts  types.ts
src/lib/services/: ExtensionManager.ts  ProviderManager.ts  UpdateProviders.ts  cookieManager.ts  index.ts  providerSandbox.worker.ts  wafResolver.ts
src/lib/storage/: ProvidersStorage.ts  SettingsStorage.ts  StorageService.ts  WatchHistoryStorage.ts  WatchListStorage.ts  extensionStorage.ts  index.ts
src/lib/sync/: desktopManifestStorage.ts  manifest.ts  syncService.ts
src/lib/utils/: helpers.ts
src/lib/zustand/: contentStore.ts  downloadStore.ts  themeStore.ts  wafStore.ts  watchHistrory.ts
src/pages/: CatalogPage.css  CatalogPage.tsx  DownloadsPage.css  DownloadsPage.tsx  DownloadsSeriesPage.tsx  ExtensionsPage.css  ExtensionsPage.tsx  HomePage.css  HomePage.tsx  MetaPage.css  MetaPage.tsx  PlayerControls.tsx  PlayerInitError.tsx  PlayerPage.css  PlayerPage.tsx  SearchPage.css  SearchPage.tsx  SettingsPage.css  SettingsPage.tsx  WatchlistPage.css  WatchlistPage.tsx
src/platform/: crypto.ts  storage.ts  waf.ts
src/styles/: index.css  variables.css
