[package]
name = "vega-app"
version = "1.2.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vega_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2", default-features = false, features = ["unsafe-headers", "rustls-tls"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "fs", "io-util", "time"] }
tauri-plugin-store = "2"
tauri-plugin-upload = "2.4.0"
url = "2"
m3u8-rs = "6.0.0"
aes = "0.9.1"
cbc = "0.2.1"
hex = "0.4.3"
axum = { version = "0.8.9", features = ["tokio"] }
urlencoding = "2.1.3"


# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
tauri-plugin-libmpv = "0.3.2"
tauri-plugin-updater = "2"
