[package]
name = "Vega"
version = "1.4.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vega_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = { version = "2", default-features = false, features = ["unsafe-headers", "rustls-tls"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json", "gzip", "brotli"], default-features = false }
wreq = { version = "5", features = ["gzip", "brotli", "deflate", "zstd", "cookies"] }
wreq-util = "2"
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls", "webpki-roots"] }
lazy_static = "1.5"
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "fs", "io-util", "time"] }
tauri-plugin-store = "2"
tauri-plugin-upload = "2.4.0"
url = "2"
m3u8-rs = "6.0.0"
aes = "0.9.1"
cbc = "0.2.1"
hex = "0.4.3"
axum = { version = "0.8.9", features = ["tokio"] }
urlencoding = "2.1.3"
librqbit = { version = "9.0.0-rc.0", default-features = false, features = ["axum", "http-api", "http-api-client", "rust-tls", "tracing-subscriber-utils"] }
anyhow = "1.0.103"
librqbit-dualstack-sockets = "0.7.0"


# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
tauri-plugin-libmpv = "0.3.2"
tauri-plugin-updater = "2"

